--- a/SimTECH/SimTECH/Components/GridChange.razor
+++ b/SimTECH/SimTECH/Components/GridChange.razor
@@ -1,4 +1,6 @@
-﻿<MudChip Size="Size.Small" Icon="@_icon" Color="@_iconColour" Label="true" Style="@_style">@_gridDisplay</MudChip>
+﻿<MudChip Size="Size.Small" Icon="@_icon" Color="@_iconColour" Label="true" Style="@_style">
+    <MudText>@_gridDisplay</MudText>
+</MudChip>
 
 @code {
     [Parameter] public int Change { get; set; }
