--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -59,6 +59,10 @@
             {
                 cellStyle = "background-color: red;";
             }
+            else if (Result.Status == RaceStatus.Fatal)
+            {
+                cellStyle = "background-color: black;";
+            }
             else
             {
                 switch (Result.Position)
