Fatalities and a bug fix

--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -43,40 +43,32 @@ else
                     <MudTh>Gap</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd>
-                        @context.PositionQ1
-                        <MudText Typo="Typo.h6"></MudText>
+                    <MudTd Style="@PositionCutoffStyles(context.PositionQ1, Model.QualyAmountQ2, Model.MaximumRaceDrivers)">
+                        <MudText Typo="Typo.h6">@context.PositionQ1</MudText>
                     </MudTd>
                     <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                        @context.Number
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText Typo="Typo.h6">@context.Number</MudText>
                     </MudTd>
                     <MudTd>
-                        @context.FullName
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText>@context.FullName</MudText>
                     </MudTd>
                     <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
-                        @context.TeamName
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText>@context.TeamName</MudText>
                     </MudTd>
                     <MudTd>
-                        @context.Power
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText Typo="Typo.h6">@context.Power</MudText>
                     </MudTd>
                     @foreach (var runResult in context.RunValuesQ1)
                     {
                         <MudTd>
-                            @runResult
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@runResult</MudText>
                         </MudTd>
                     }
                     <MudTd>
-                        @context.MaxScoreQ1
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText Typo="Typo.h6">@context.MaxScoreQ1</MudText>
                     </MudTd>
                     <MudTd>
-                        +@(context.GapQ1)
-                        <MudText Typo="Typo.h6"></MudText>
+                        <MudText Typo="Typo.h6">+@(context.GapQ1)</MudText>
                     </MudTd>
                 </RowTemplate>
             </MudTable>
@@ -112,40 +104,32 @@ else
                         <MudTh>Gap</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd>
-                            @context.PositionQ2
-                            <MudText Typo="Typo.h6"></MudText>
+                        <MudTd Style="@PositionCutoffStyles(context.PositionQ2, Model.QualyAmountQ3)">
+                            <MudText Typo="Typo.h6">@context.PositionQ2</MudText>
                         </MudTd>
                         <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                            @context.Number
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.Number</MudText>
                         </MudTd>
                         <MudTd>
-                            @context.FullName
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText>@context.FullName</MudText>
                         </MudTd>
                         <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
-                            @context.TeamName
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText>@context.TeamName</MudText>
                         </MudTd>
                         <MudTd>
-                            @context.Power
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.Power</MudText>
                         </MudTd>
                         @foreach (var runResult in context.RunValuesQ2)
                         {
                             <MudTd>
-                                @runResult
-                                <MudText Typo="Typo.h6"></MudText>
+                                <MudText Typo="Typo.h6">@runResult</MudText>
                             </MudTd>
                         }
-                        <MudTd
-                            >@context.MaxScoreQ2
-                            <MudText Typo="Typo.h6"></MudText>
+                        <MudTd>
+                            <MudText Typo="Typo.h6">@context.MaxScoreQ2</MudText>
                         </MudTd>
                         <MudTd>
-                            +@(context.GapQ2)
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">+@(context.GapQ2)</MudText>
                         </MudTd>
                         </RowTemplate>
                 </MudTable>
@@ -187,39 +171,31 @@ else
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd>
-                            @context.PositionQ3
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.PositionQ3</MudText>
                         </MudTd>
                         <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                            @context.Number
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.Number</MudText>
                         </MudTd>
                         <MudTd>
-                            @context.FullName
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText>@context.FullName</MudText>
                         </MudTd>
                         <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
-                            @context.TeamName
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText>@context.TeamName</MudText>
                         </MudTd>
                         <MudTd>
-                            @context.Power
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.Power</MudText>
                         </MudTd>
                         @foreach (var runResult in context.RunValuesQ3)
                         {
                             <MudTd>
-                                @runResult
-                                <MudText Typo="Typo.h6"></MudText>
+                                <MudText Typo="Typo.h6">@runResult</MudText>
                             </MudTd>
                         }
                         <MudTd>
-                            @context.MaxScoreQ3
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">@context.MaxScoreQ3</MudText>
                         </MudTd>
                         <MudTd>
-                            +@(context.GapQ3)
-                            <MudText Typo="Typo.h6"></MudText>
+                            <MudText Typo="Typo.h6">+@(context.GapQ3)</MudText>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
@@ -336,6 +312,17 @@ else
 
             advancedQ3++;
         }
+    }
+
+    private string PositionCutoffStyles(int position, int sessionCutoff, int? raceCutoff = null)
+    {
+        if (raceCutoff.HasValue && position > raceCutoff)
+            return "background-color: rebeccapurple";
+
+        if (position > sessionCutoff)
+            return "background-color: red;";
+
+        return string.Empty;
     }
 
     private async Task Finish()
