--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -200,7 +200,7 @@
         "Mistake" =>        Icons.Material.Filled.TaxiAlert,
         "Pitstop" =>        Icons.Material.Filled.LocalGasStation,
         "Swap" =>           Icons.Material.Filled.SwapVert,
-        "Death" =>          IconCollection.Cross,
+        "Death" =>          Icons.Material.Filled.Balance,
         _ =>                Icons.Material.Filled.QuestionMark
     };
 
