--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -113,7 +113,7 @@ else
                                 <MudTd Class="number-col">-</MudTd>
                             }
                         }
-                        <MudTd>@Math.Round(context.ResultCells.Select(e => e.Position).Average(), 2)</MudTd>
+                        <MudTd>@context.Average</MudTd>
                     </RowTemplate>
                     <FooterContent>
                         <MudTd colspan="20">
@@ -179,7 +179,7 @@ else
                             <MudTd>-</MudTd>
                         }
                     }
-                    <MudTd>@Math.Round(context.ResultCells.Select(e => e.Position).Average(), 2)</MudTd>
+                    <MudTd>@context.Average</MudTd>
                 </RowTemplate>
             </MudTable>
         </MudTabPanel>
