Massively improved the design and readability

--- a/SimTECH/SimTECH/Components/GridChange.razor
+++ b/SimTECH/SimTECH/Components/GridChange.razor
@@ -1,6 +1,7 @@
-﻿<MudChip Size="Size.Small" Icon="@_icon" Color="@_iconColour" Label="true" Style="@_style">
+﻿<MudStack Row="true">
+    <MudIcon Size="Size.Small" Icon="@_icon" Color="@_iconColour" Style="@_style" />
     <MudText>@_gridDisplay</MudText>
-</MudChip>
+</MudStack>
 
 @code {
     [Parameter] public int Change { get; set; }
@@ -13,7 +14,7 @@
             if (Change < 0)
                 return Icons.Material.Filled.KeyboardDoubleArrowDown;
 
-            return Icons.Material.Filled.Dehaze;
+            return Icons.Material.Filled.DragHandle;
         }
     }
 
