--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -21,12 +21,16 @@ else
                         <CountryFlag Code="@Model.Country" />
                         @Model.Name - QUALIFYING Q1
                     </MudText>
+
                     <MudSpacer />
-                    @if (advancedQ1 != Model.AmountRuns)
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ1">Advance</MudButton>
-                    }
-                    <ScreenshotButton TargetId="q1-result-table" />
+
+                    <MudButtonGroup Variant="Variant.Outlined">
+                        <ScreenshotButton TargetId="q1-result-table" />
+                        @if (advancedQ1 != Model.AmountRuns)
+                        {
+                            <MudButton OnClick="AdvanceQ1">Advance</MudButton>
+                        }
+                    </MudButtonGroup>
                 </ToolBarContent>
                 <HeaderContent>
                     <MudTh>#</MudTh>
@@ -220,7 +224,6 @@ else
 
     private bool loading = true;
     private int advancedQ1, advancedQ2, advancedQ3 = 0;
-    private double gapMarge = 0.08;
 
     protected override async Task OnInitializedAsync()
     {
@@ -317,7 +320,7 @@ else
     private string PositionCutoffStyles(int position, int sessionCutoff, int? raceCutoff = null)
     {
         if (raceCutoff.HasValue && position > raceCutoff)
-            return "background-color: rebeccapurple";
+            return "background-color: mediumpurple";
 
         if (position > sessionCutoff)
             return "background-color: red;";
