--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -13,29 +13,29 @@
         <ToolBarContent>
             <MudStack Row="true" Justify="Justify.SpaceBetween" Style="width:100%">
                 <MudText>
-                    <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
                     <CountryFlag Code="@Model.Country" />
                     @Model.Name - ROUND @Model.Round
+                    <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
                 </MudText>
 
                 <MudChip Color="Color.Dark" DisableRipple="true" Label="true">@(racedLaps) / @(totalLaps)</MudChip>
 
-                <div>
+                <MudButtonGroup Variant="Variant.Outlined">
+                    <ScreenshotButton TargetId="race-display" />
+                    <MudButton StartIcon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" OnClick="ShowGraph">Chart</MudButton>
                     @if (!Model.IsFinished)
                     {
                         @if (calculated >= calculationCount)
                         {
-                            <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                            <MudButton OnClick="Finish">Finish</MudButton>
                         }
                         else
                         {
-                            @* The following seems a bit too clumsy  to implement, so it isn't implemented
-                            <MudNumericField T="int" @bind-Value="calculationsPerAdvance" Label="Laps to advance x10" Class="field-md" />
-                            *@
-                            <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                            
+                            <MudButton Color="Color.Tertiary" OnClick="Advance">Advance</MudButton>
                         }
                     }
-                </div>
+                </MudButtonGroup>
             </MudStack>
         </ToolBarContent>
         <ColGroup>
@@ -48,8 +48,8 @@
             <col style="width: 50px" />
             <col style="width: 50px" />
             <col style="width: 75px" />
-            <col style="width: 150px" />
-            <col />
+            <col style="width: 400px" />
+            <col style="width: 400px" />
         </ColGroup>
         <HeaderContent>
             <MudTh>#</MudTh>
@@ -61,34 +61,38 @@
             <MudTh>TYRE</MudTh>
             <MudTh>Score</MudTh>
             <MudTh>Status</MudTh>
-            <MudTh>Events</MudTh>
-            <MudTh>Visual</MudTh>
+            <MudTh>Progression</MudTh>
+            <MudTh>Gap</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
-                <MudText Typo="Typo.h6">@context.Position</MudText>
+                <MudText>@context.Position</MudText>
             </MudTd>
             <MudTd>
                 <GridChange Change="@context.GridChange" />
             </MudTd>
             <MudTd>
-                <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
-                <MudText>@context.FullName</MudText>
-                <span>
-                    @if (context.HasFastestLap)
-                    {
-                        <MudIcon Icon="@Icons.Material.Filled.Timer" Size="Size.Small" Style="color:mediumpurple" />
-                    }
-                </span>
+                <MudStack Row="true">
+                    <MudText>
+                        <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
+                        @context.FullName
+                    </MudText>
+                    <span>
+                        @if (context.HasFastestLap)
+                        {
+                            <MudIcon Icon="@Icons.Material.Filled.Timer" Size="Size.Small" Style="color:mediumpurple" />
+                        }
+                    </span>
+                </MudStack>
             </MudTd>
-            <MudTd>
-                <MudText Typo="Typo.h6">@context.Number</MudText>
+            <MudTd Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                <MudText>@context.Number</MudText>
             </MudTd>
             <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
                 <MudText>@context.TeamName</MudText>
             </MudTd>
             <MudTd>
-                <MudText Typo="Typo.h6">@context.Power</MudText>
+                <MudText>@context.Power</MudText>
             </MudTd>
             <MudTd>
                 <span class="tyre" style="border-color:@(context.CurrentTyre.Colour)">
@@ -96,12 +100,12 @@
                 </span>
             </MudTd>
             <MudTd>
-                <MudText Typo="Typo.h6">@context.LapSum</MudText>
+                <MudText>@context.LapSum</MudText>
             </MudTd>
             <MudTd>
                 @if (context.Status == RaceStatus.Racing)
                 {
-                    <MudText Typo="Typo.h6">+@(context.TimedGap(Model.GapMarge))</MudText>
+                    <MudText>+@(context.TimedGap(Model.GapMarge))</MudText>
                 }
                 else
                 {
@@ -109,35 +113,33 @@
                 }
             </MudTd>
             <MudTd>
-                @foreach (var lapEvent in context.LapResults)
-                {
-                    @foreach (var raceEvent in lapEvent.ListOfDubiousEvents())
+                <div class="relative" style="height:8px;width:100%">
+                    @foreach (var lapEvent in context.LapScores)
                     {
-                        <MudText Typo="Typo.caption">L:@(NumberHelper.CalcLapCount(lapEvent.Order * 10, Model.TrackLength)): @(raceEvent.ToString())</MudText>
+                        @foreach (var raceEvent in lapEvent.ListOfDubiousEvents().Select((element, index) => new { index, element }))
+                        {
+                            <MudIcon Icon="@SignalIcon(raceEvent.element.ToString())" Color="Color.Tertiary" Class="absolute overflow-visible" Style="@SignalStyle(lapEvent.Order, raceEvent.index)" />
+                        }
                     }
-                }
+                </div>
+                <MudProgressLinear Value="@(NumberHelper.CalcLapCount(context.LastLap * 10, Model.TrackLength))" Min="0" Max="@totalLaps" Size="Size.Medium" Color="Color.Primary" Class="my-2" />
             </MudTd>
             <MudTd>
-                <MudStack Justify="Justify.SpaceAround" AlignItems="AlignItems.Stretch">
-                    <div class="relative" style="height:8px;width:100%">
-                        @foreach (var lapEvent in context.LapResults)
-                        {
-                            @foreach (var raceEvent in lapEvent.ListOfDubiousEvents().Select((element, index) => new { index, element }))
-                            {
-                                <MudIcon Icon="@SignalIcon(raceEvent.element.ToString())" Color="Color.Tertiary" Class="absolute overflow-visible" Style="@SignalStyle(lapEvent.Order, raceEvent.index)" />
-                            }
-                        }
-                    </div>
-                    <MudProgressLinear Value="@(NumberHelper.CalcLapCount(context.LastLap * 10, Model.TrackLength))" Min="0" Max="@totalLaps" Size="Size.Medium" Class="my-2" />
-                    <MudProgressLinear Value="@context.LapSum" Min="0" Max="@highestScore" Size="Size.Medium" Color="Color.Secondary" Class="my-2" />
-                </MudStack>
+                <MudProgressLinear Value="@context.LapSum" Min="0" Max="@highestScore" Size="Size.Medium" Color="Color.Secondary" Class="my-2" />
             </MudTd>
         </RowTemplate>
         <FooterContent>
             <MudTd colspan="20">
-                <MudStack Row="true" Justify="Justify.SpaceBetween">
-                    <ScreenshotButton TargetId="race-display" />
-                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowGraph" />
+                <MudStack Row="true">
+                    <MudText>Event Legend</MudText>
+                    <MudChip Icon="@Icons.Material.Filled.CarCrash" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Driver</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.CarRepair" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Car</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.EvStation" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Engine</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.ErrorOutline" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Mistake</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.LocalGasStation" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Pitstop</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.SwapVert" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Driver Swap</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.Balance" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Fatality</MudChip>
+                    <MudChip Icon="@Icons.Material.Filled.QuestionMark" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Undetermined</MudChip>
                 </MudStack>
             </MudTd>
         </FooterContent>
@@ -182,6 +184,12 @@
         racedLaps = NumberHelper.CalcLapCount(calculated * 10, Model.TrackLength);
         totalLaps = NumberHelper.CalcLapCount(Model.RaceLength, Model.TrackLength);
 
+        if (Model.IsFinished)
+        {
+            highestScore = Model.RaceDrivers.Max(e => e.LapSum);
+            fastestLap = Model.RaceDrivers.SelectMany(e => e.LapScores).Max(e => e.Score);
+        }
+
         loading = false;
     }
 
@@ -194,10 +202,10 @@
 
     string SignalIcon(string raceEvent) => raceEvent switch
     {
-        "DriverDnf" =>      IconCollection.CarCrash,
+        "DriverDnf" =>      Icons.Material.Filled.CarCrash,
         "CarDnf" =>         Icons.Material.Filled.CarRepair,
-        "EngineDnf" =>      IconCollection.Engine,
-        "Mistake" =>        Icons.Material.Filled.TaxiAlert,
+        "EngineDnf" =>      Icons.Material.Filled.EvStation,
+        "Mistake" =>        Icons.Material.Filled.ErrorOutline,
         "Pitstop" =>        Icons.Material.Filled.LocalGasStation,
         "Swap" =>           Icons.Material.Filled.SwapVert,
         "Death" =>          Icons.Material.Filled.Balance,
@@ -263,7 +271,7 @@
                     // Finally add the score to the lap results
                     lapScore.Score = lapValue;
 
-                    driver.LapResults.Add(lapScore);
+                    driver.LapScores.Add(lapScore);
                     lapScoresToPersist.Add(lapScore);
                 }
             }
@@ -431,7 +439,7 @@
             .ToList();
 
         // Should be removed when it is done per advance
-        var allLapScores = Model.RaceDrivers.SelectMany(e => e.LapResults).Where(e => e.Id == 0).ToList();
+        var allLapScores = Model.RaceDrivers.SelectMany(e => e.LapScores).Where(e => e.Id == 0).ToList();
         await PersistLapScores(allLapScores);
 
         // Todo: check if this doesnt mess with the lapscores if those are persisted per advance
